# services/users/api/route.mjs
@@ -10,14 +10,13 @@ routes.post("/register", async (req, res) => {
   #swagger.tags = ['User']
   #swagger.description = 'Endpoint to register a new user'
   #swagger.parameters['user'] = {
-    in: 'body',
-    description: 'User object',
     required: true,
+    in: 'body',
     schema: {
       pseudonyme: 'JohnDoe',
       email: 'jhondoe@test.fr',
       password: 'password'
-    }
+    },
   }
   */
   try {
@@ -35,13 +34,12 @@ routes.post("/login", async (req, res) => {
   #swagger.tags = ['User']
   #swagger.description = 'Endpoint to login a user'
   #swagger.parameters['user'] = {
-    in: 'body',
-    description: 'User object',
     required: true,
+    in: 'body',
     schema: {
       email: 'jhondoe@test.fr',
       password: 'password'
-    }
+    },
   }
   */
   try {
@@ -55,10 +53,37 @@ routes.post("/login", async (req, res) => {
 });
 
 routes.get("/favorites", authenticateToken, async (req, res) => {
+  /*
+  #swagger.tags = ['User']
+  #swagger.description = 'Endpoint to get all favorites of a user'
+  #swagger.security = [{
+    "bearerAuth": []
+  }]
+  */
   return res.status(200).json(await userDao.getFavorites(req.user.email));
 });
 
 routes.put("/favorites", authenticateToken, async (req, res) => {
+  /*
+  #swagger.tags = ['User']
+  #swagger.description = 'Endpoint to add a favorite to a user'
+  #swagger.security = [{
+    "bearerAuth": []
+  }]
+  #swagger.parameters['artwork'] = {
+    in: 'body',
+    description: 'Artwork object',
+    required: true,
+    type: 'object',
+    schema: {
+      "id_museum": "E000000000",
+      "name": "Le Lead",
+      "author": "Mathieu",
+      "type": "Peinture",
+      "size": "100x100",
+    }
+  }
+  */
   const artwork = req.body;
 
   try {
@@ -72,6 +97,19 @@ routes.put("/favorites", authenticateToken, async (req, res) => {
 });
 
 routes.delete("/favorites/:artwork_id", authenticateToken, async (req, res) => {
+  /*
+  #swagger.tags = ['User']
+  #swagger.description = 'Endpoint to remove a favorite from a user'
+  #swagger.security = [{
+    "bearerAuth": []
+  }]
+  #swagger.parameters['artwork_id'] = {
+    in: 'path',
+    description: 'Artwork id',
+    required: true,
+    type: 'string'
+  }
+  */
   const artwork_id = decodeURIComponent(req.params.artwork_id);
 
   if (!artwork_id) {
